Revision history for {{$dist->name}}

{{$NEXT}}

0.50      2018-06-01 07:58:33 -0400
  - Additional diagnostics

0.49_05   2018-05-29 12:44:45 -0400
  - Require Alien::FFI 0.20 for bugfixes

0.49_04   2018-05-27 07:36:58 -0400
  - Additional diagnostics
  - Added a FAQ section.  Some other minor documentation enhancements.

0.49_03   2018-05-19 10:09:15 -0400
  - The previous version contained build files that would break the install
    unless you were building on my machine.  This is what the previous
    version should have been.

0.49_02   2018-05-18 22:08:43 -0400
  - Fix version mismatch error with XS

0.49_01   2018-05-18 16:16:13 -0400
  - Move the source repository for this project into the GitHub org Perl5-FFI
    The new URL is https://github.org/Perl5-FFI/FFI-Platypus
  - Remove dependency on JSON::PP, use Data::Dumper for build configuration.
    This may improve startup performance.

0.48      2018-02-20 09:37:32 -0500
  - setting lib => undef is now the same as setting it to [undef] in the constructor
    (previously lib => undef was ignored)

0.47      2017-03-23 18:26:01 -0400
  - Fix installer bug where My::ShareConfig was accidentally declared as a
    prereq

0.46      2017-03-23 15:47:29 -0400
  - Remove some internal use of Module::Build with the intent of one day
    migrating to EUMM or some other installer
  - Remove Module::Build::FFI.  It now has its own distribution.
  - Prefix the lang attribute with an equal '=' sign to indicate a fully qualified
    class name instead of one under FFI::Platypus::Lang

0.45      2016-10-24 07:59:57 -0400
  - Remove check for Threaded Perl / OpenBSD, as the issue there has been reported fixed

0.44      2016-10-20 14:31:23 -0400
  - You can now control which implementation of strdup FFI::Platypus::Memory uses
    via the FFI_PLATYPUS_MEMORY_STRDUP_IMPL environment variable.

0.43      2016-07-08 03:28:57 -0400
  - Numerous fixes for systems with 64bit big-endian arch